--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "Hostone - Agency",
+  "homepage": "https://adi2381.github.io/hostone/",
   "version": "1.0.0",
   "description": "Hostone — Agency One Page Parallax Website Template",
   "dependencies": {
